--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "moment-timezone": "^0.5.13",
     "normalize.css": "^7.0.0",
     "rxjs": "^5.4.0",
+    "slugify": "^1.2.1",
     "vue-clipboards": "^1.1.0",
     "vue-google-oauth": "^1.0.5",
     "vue-i18n": "^6.1.3",
